<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/height_1_100"
    android:background="@drawable/linearlayout"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_fragment_tt" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/shoujiandengji"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#3293DB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search_banjianliushuihao"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="360121100001-140527-00003"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search_apply_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search_id_num"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shoujihaoma"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search_shenqingriqi_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shoulijigou"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_2_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shoulirenyuan"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@id/tv_list_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoulididian_"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>

   

</LinearLayout>